Changed back-end url

--- a/hardest-snake-game/account-info.html
+++ b/hardest-snake-game/account-info.html
@@ -164,7 +164,7 @@
 
             $.ajax({
                 type: 'post',
-                url: 'https://hardest-snake-game-test.jelka33.repl.co/get-userinfo',
+                url: 'https://hardest-snake-game.jelka33.repl.co/get-userinfo',
                 data: JSON.stringify(objData),
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
@@ -186,7 +186,7 @@
 
                 $.ajax({
                     type: 'post',
-                    url: 'https://hardest-snake-game-test.jelka33.repl.co/change-userinfo',
+                    url: 'https://hardest-snake-game.jelka33.repl.co/change-userinfo',
                     data: JSON.stringify(objData),
                     dataType: "json",
                     contentType: "application/json; charset=utf-8",
@@ -209,7 +209,7 @@
 
                 $.ajax({
                     type: 'post',
-                    url: 'https://hardest-snake-game-test.jelka33.repl.co/change-userinfo',
+                    url: 'https://hardest-snake-game.jelka33.repl.co/change-userinfo',
                     data: JSON.stringify(objData),
                     dataType: "json",
                     contentType: "application/json; charset=utf-8",
@@ -232,7 +232,7 @@
 
                 $.ajax({
                     type: 'post',
-                    url: 'https://hardest-snake-game-test.jelka33.repl.co/change-userinfo',
+                    url: 'https://hardest-snake-game.jelka33.repl.co/change-userinfo',
                     data: JSON.stringify(objData),
                     dataType: "json",
                     contentType: "application/json; charset=utf-8",
