--- a/hardest-snake-game/game.html
+++ b/hardest-snake-game/game.html
@@ -899,7 +899,7 @@
                         
                         $.ajax({
                             type: 'post',
-                            url: 'https://hardest-snake-game-test.jelka33.repl.co/evaluate-score',
+                            url: 'https://hardest-snake-game.jelka33.repl.co/evaluate-score',
                             data: JSON.stringify(objData),
                             dataType: "json",
                             contentType: "application/json; charset=utf-8",
