--- a/hardest-snake-game/index.html
+++ b/hardest-snake-game/index.html
@@ -290,7 +290,7 @@
 
             $.ajax({
                 type: 'post',
-                url: 'https://hardest-snake-game-test.jelka33.repl.co/login-user-bysession',
+                url: 'https://hardest-snake-game.jelka33.repl.co/login-user-bysession',
                 data: JSON.stringify(objData),
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
