--- a/hardest-snake-game/login-signup.html
+++ b/hardest-snake-game/login-signup.html
@@ -191,7 +191,7 @@
             function login(){
                 $.ajax({
                     type: 'post',
-                    url: 'https://hardest-snake-game-test.jelka33.repl.co/login-user',
+                    url: 'https://hardest-snake-game.jelka33.repl.co/login-user',
                     data: $('#login-form').serialize(),
                     success: function(data){
                         console.log(data.msg);
@@ -210,7 +210,7 @@
             function signup(){
                 $.ajax({
                     type: 'post',
-                    url: 'https://hardest-snake-game-test.jelka33.repl.co/signup-user',
+                    url: 'https://hardest-snake-game.jelka33.repl.co/signup-user',
                     data: $('#signup-form').serialize(),
                     success: function(data){
                         console.log(data.msg);
