Added 'href' atribute for "View Code on Github" button

--- a/hardest-snake-game/index.html
+++ b/hardest-snake-game/index.html
@@ -231,7 +231,7 @@
                 <p class="beggining-game-description">Smaller snake, bigger terrain<br>every food adds wall</p>
                 <div class="beggining-buttons-container">
                     <a href="game.html"><button>Play Now</button></a>
-                    <a href="#"><button id="view-code-btn">View Code<br>on Github</button></a>
+                    <a href="https://github.com/Jelka33/hardest-snake-game"><button id="view-code-btn">View Code<br>on Github</button></a>
                 </div>
             </div>
         </div>
